--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,23 @@
 <section class="container is-fluid master-container">
-  <app-todo-input></app-todo-input>
-  <app-todo-list></app-todo-list>
+  <section class="hero">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          TODO APP
+        </h1>
+        <h2 class="subtitle">
+          Add some tasks for your day
+        </h2>
+      </div>
+    </div>
+  </section>
+  <div class="columns">
+    <div class="column is-one-fifth stack-form">
+      <app-todo-input></app-todo-input>
+    </div>
+    <!--<div class="column is-1"></div>-->
+    <div class="column is-three-fifths">
+      <app-todo-list></app-todo-list>
+    </div>
+  </div>
 </section>
