--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,16 @@
 .master-container {
   height: 100vh;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+
+.title {
+  text-align: center;
+  font-size: 4.8em;
+}
+
+.subtitle {
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: 300;
 }
