master: restructure todo-feature using composition and firebase hosting

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,5 @@
       </div>
     </div>
   </section>
-  <div class="columns">
-    <div class="column is-one-fifth stack-form">
-      <app-todo-input></app-todo-input>
-    </div>
-    <!--<div class="column is-1"></div>-->
-    <div class="column is-three-fifths">
-      <app-todo-list></app-todo-list>
-    </div>
-  </div>
+  <app-todo></app-todo>
 </section>
