--- a/src/app/todo/component/todo-input/todo-input.component.html
+++ b/src/app/todo/component/todo-input/todo-input.component.html
@@ -13,7 +13,7 @@
 </form>
 <div class="columns">
   <div class="column is-one-third is-offset-one-third">
-    <button class="button is-primary add-button" (click)="onAddTodo()" [disabled]="form.invalid">
+    <button class="button is-primary add-button" (click)="add()" [disabled]="form.invalid">
       Add Task
     </button>
   </div>
